@@ -1,6 +1,11 @@
 require("core.keymap")
 require("core.options")
+
 require("plugins.telescope")
+require("plugins.treesitter")
+require("plugins.autopairs")
+
 require("themes.gruvbox")
+
 require("lsp.nil")
 require("lsp.lua_ls")
