@@ -1,3 +1,8 @@
+11-23-2024
+- add some keybinds to neovim
+- add autopairs to neovim
+
+
 11-22-2024
 - added battery monitor service for dunst
 - configuration for hostname resolution on the wireguard server
